# IOS-App-builder

./: .gitmodules  Makefile  Makefile.common  README.md  control  scoop.json  setup_dev.ps1
.github/workflows/: README.md  android-emulator.yml  build-all.yml  build.yml  lightnovelpub.yml  trollstore.yml
Apps/: Light novel pub.ipa
Apps/AndroidEmulator/: ExportOptions.plist  LaunchScreen.storyboard  Main.storyboard  build.gradle  settings.gradle
Apps/AndroidEmulator/AndroidEmulator.xcodeproj/: project.pbxproj
Apps/AndroidEmulator/app/: build.gradle
Apps/AndroidEmulator/app/src/main/cpp/: CMakeLists.txt
Apps/AndroidEmulator/app/src/main/cpp/core/runtime/: android_runtime.cpp
Apps/AndroidEmulator/scripts/: build.sh
Apps/lightnovelpub/: ExportOptions.plist  Info.plist  LaunchScreen.storyboard  Main.storyboard  Makefile  Package.swift  README.md  build.yml  entitlements.plist
Apps/trollstore/: entitlements.plist
Core/: TSEnvironmentManager.h  TSEnvironmentManager.m  Tweak.x
bins/: README.md  debug_helper.sh  tools_config.plist
extensions/: README.md
extensions/TSAppModifier/: TSAppModifier.h  TSAppModifier.m
extensions/TSCore/: TSCore.h  TSCore.m
extensions/TSExploits/: TSExploitManager.h  TSExploitManager.m
extensions/TSInstaller/: TSInstaller.h  TSInstaller.m
extensions/TSRootHelper/: TSRootHelper.h  TSRootHelper.m
layout/DEBIAN/: postinst  prerm
tools/: README.md
tools/root/: giveMeRoot.m  integrate_root.sh  root_entitlements.plist
tools/scripts/: build.sh  build_enhanced.sh  generate_default_icon.sh
(+30 files in other folders)
